# nexusai

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
plugins/: README.md
plugins/hello-world/: index.ts
scripts/: generate-icons.sh
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AgentsPage.tsx  AuthPage.tsx  BrowserAutomationPage.tsx  ChatPage.tsx  DataManagementPage.tsx  ErrorBoundary.tsx  IntelligentSearchPage.tsx  KnowledgeBasePage.tsx  MCPPage.tsx  ModelsPage.tsx  PluginPage.tsx  ProjectPage.tsx  ProviderIcons.tsx  SettingsPage.tsx  Sidebar.tsx  SkillsPage.tsx  TeamCollaborationPage.tsx  WorkflowPage.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: browserAutomationService.ts  chatFolderService.ts  conversationExportService.ts  conversationSearchService.ts  conversationTemplateService.ts  dataManagementService.ts  documentParser.ts  embeddingService.ts  hnswVectorIndex.ts  indexedDBCacheService.ts  intelligentSearchService.ts  keyboardShortcutsService.ts  llmService.ts  mcpService.ts  messageRatingService.ts  multimodalService.ts  optimizedRAGService.ts  pluginRuntime.ts  pluginSdk.ts  ragService.ts  ragWorkerManager.ts  teamCollaborationService.ts  ttsService.ts  voiceInteractionService.ts  workflowService.ts
src/stores/: authStore.ts  knowledgeBaseStore.ts  mcpStore.ts  pluginStore.ts  uiStore.ts  workflowStore.ts
src/types/: mcp.ts  plugin.ts  (+3 more)
(+1 files in other folders)
